# voxel-raycaster

./: .editorconfig  .gitignore  CMakeLists.txt  FindEGL.cmake  FindSFML.cmake  README.md
config/: general_settings  graphics_settings
include/: Application.h  CLCaster.h  CL_Wrapper.h  Camera.h  Clapper.h  ConfigDB.h  Curses.h  Event.hpp  FrameWatcher.h  GL_Testing.h  GraphTimer.h  Gui.h  Hardware_Caster.h  Input.h  Light.h  LightController.h  LightHandle.h  Logger.h  Map.h  NetworkInput.h  Old_map.h  Pub_Sub.h  Pub_Sub.hpp  Ray.h  RayCaster.h  Renderer.cpp  Renderer.h  Software_Caster.h  VKaster.h  Vector3.h  Vector4.hpp  util.hpp
include-legacy/: CLCaster.h  Camera.h  ConfigDB.h  Input.h  LightHandle.h  NetworkInput.h  Pub_Sub.h
include/imgui/: imconfig.h  imgui-SFML.h  imgui-multilines.hpp  imgui.cpp  imgui_demo.cpp  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
include/map/: ArrayMap.h  Map.h  Octree.h
include/raycaster/: Hardware_Caster.h  RayCaster.h  Software_Caster.h
kernels/: kernel.cl  kernel.txt  minimal_kernel.c  minimal_kernel.cl  print_arguments.cl  print_kernel.cl  ray_caster_kernel.cl
notes/: notes.cpp  opencl_error_codes.txt
shaders/: passthrough.frag  passthrough.vert
src/: .main.cpp.swp  Application.cpp  CLCaster.cpp  CL_Wrapper.cpp  Camera.cpp  Clapper.cpp  ConfigDB.cpp  Curses.cpp  Curses.h  FrameWatcher.cpp  GL_Testing.cpp  GraphTimer.cpp  Gui.cpp  Hardware_Caster.cpp  Input.cpp  Light.cpp  LightController.cpp  LightHandle.cpp  Logger.cpp  Map.cpp  NetworkInput.cpp  Old_Map.cpp  Old_map.cpp  Pub_Sub.cpp  Ray.cpp  RayCaster.cpp  Software_Caster.cpp  TestPlatform.cpp  VKaster.cpp  Vector3.cpp  main.cpp
src-legacy/: Camera.cpp  ConfigDB.cpp  FrameWatcher.cpp  GraphTimer.cpp  Gui.cpp  Input.cpp  LightController.cpp  LightHandle.cpp  NetworkInput.cpp  Pub_Sub.cpp  Ray.cpp
src-legacy/map/: Map.cpp
src/imgui/: imgui-SFML.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
src/map/: ArrayMap.cpp  Map.cpp  Octree.cpp  Old_Map.cpp
src/raycaster/: Hardware_Caster.cpp  RayCaster.cpp  Software_Caster.cpp
